--- a/debian/rules
+++ b/debian/rules
@@ -61,6 +61,7 @@ binary-arch: build-stamp
 	chmod a+x debian/at/etc/init.d/atd
 	dh_systemd_enable
 	dh_installinit --name=atd --onlyscripts -- defaults 89 11
+	dh_lintian
 	dh_systemd_start
 	# Needed to keep in line with the previous upload:
 	chown root:daemon debian/at/etc/at.deny
