Document behaviour when using past time, thanks Kelly Price (Closes: #639900).

--- a/at.1.in
+++ b/at.1.in
@@ -125,6 +125,12 @@ to run a job at 10:00am on July 31, you would do
 and to run a job at 1am tomorrow, you would do
 .B at 1am tomorrow.
 .PP
+If you specify a job to absolutely run at a specific time and date in
+the past, the job will run as soon as possible.  For example, if it is
+8pm and you do a
+.B at 6pm today,
+it will run more likely at 8:05pm.
+.PP
 The definition of the time specification can be found in
 .IR @prefix@/share/doc/at/timespec .
 .PP
