--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,8 @@ confflags = --prefix=/usr --with-loadavg_mx=1.5 \
             --with-jobdir=/var/spool/cron/atjobs \
             --with-atspool=/var/spool/cron/atspool \
             --with-systemdsystemunitdir=/lib/systemd/system \
-            SENDMAIL=/usr/sbin/sendmail
+            SENDMAIL=/usr/sbin/sendmail \
+	    --with-selinux
 
 build: build-arch build-indep
 build-arch: build-stamp
