--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Build-Depends: autotools-dev,
                libpam0g-dev,
                libselinux1-dev [linux-any],
                perl (>= 5.10.1),
-Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/at.git
-Vcs-Git: https://anonscm.debian.org/collab-maint/at.git
+Vcs-Browser: https://anonscm.debian.org/git/collab-maint/at.git/
+Vcs-Git: https://anonscm.debian.org/git/collab-maint/at.git/ -b debian
 Homepage: http://blog.calhariz.com
 
 
