Fully personalize debian/gbp.conf.

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -3,6 +3,8 @@ upstream-branch = master
 debian-branch = debian
 
 [buildpackage]
+pbuilder = true
+export-dir = ../build-area
 
 [import-orig]
-
+pristine-tar = true
