--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -5,6 +5,7 @@ debian-branch = debian
 [buildpackage]
 pbuilder = true
 export-dir = ../build-area
+sign-tags = true
 
 [import-orig]
 pristine-tar = true
