--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Ansgar Burchardt <ansgar@debian.org>,
 Standards-Version: 3.9.8
 Build-Depends: autotools-dev,
                bison,
-               debhelper (>= 9),
+               debhelper (>= 9.20160114),
                dh-systemd,
                flex,
                libpam0g-dev,
