--- a/debian/rules
+++ b/debian/rules
@@ -71,7 +71,7 @@ binary-arch: build-stamp
 	dh_strip
 	dh_gencontrol
 	dh_md5sums
-	dh_builddeb -- -Zxz
+	dh_builddeb
 
 binary: binary-indep binary-arch
 
