Add Build-Depend libfl-dev, (Closes: #846413).

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: autotools-dev,
                debhelper (>= 9.20160114),
                dh-systemd,
                flex,
+               libfl-dev,
                libpam0g-dev,
                libselinux1-dev [linux-any],
                perl (>= 5.10.1),
