--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: autotools-dev,
                libfl-dev,
                libpam0g-dev,
                libselinux1-dev [linux-any],
-               perl (>= 5.10.1),
+               perl:any (>= 5.10.1),
 Vcs-Browser: https://anonscm.debian.org/git/collab-maint/at.git/
 Vcs-Git: https://anonscm.debian.org/git/collab-maint/at.git/ -b debian
 Homepage: http://blog.calhariz.com
