--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: at
 Section: admin
 Priority: standard
-Maintainer: Jose M Calhariz <jose@calhariz.com>
+Maintainer: Jose M Calhariz <calhariz@debian.org>
 Uploaders: Ansgar Burchardt <ansgar@debian.org>,
 Standards-Version: 3.9.8
 Build-Depends: autotools-dev,
