--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,8 @@ Build-Depends: autotools-dev,
                libpam0g-dev,
                libselinux1-dev [linux-any],
                perl:any (>= 5.10.1),
-Vcs-Browser: https://anonscm.debian.org/git/collab-maint/at.git/
-Vcs-Git: https://anonscm.debian.org/git/collab-maint/at.git/ -b debian
+Vcs-Browser: https://salsa.debian.org/debian/amanda
+Vcs-Git: https://salsa.debian.org/debian/amanda.git -b debian
 Homepage: http://blog.calhariz.com
 
 
