improve as reported by 892819
The atd.service was lacking in some areas.  For more info see:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=892819

--- a/atd.service.in
+++ b/atd.service.in
@@ -1,10 +1,13 @@
 [Unit]
 Description=Deferred execution scheduler
 Documentation=man:atd(8)
+After=remote-fs.target nss-user-lookup.target
 
 [Service]
 ExecStart=@sbindir@/atd -f
 IgnoreSIGPIPE=false
+KillMode=process
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
