remove stale jobs after a reboot
From bug report:

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=885891

This patch assumes that /run/systemd have a date very near the boot time
of the machine.

Needed to implement the variable atjobdir.

"ExecStartPre=-find @atjobdir@ -type f ... -delete" does not have a
slash on the end of the path on purpose.  If atjobdir is miss
calculated and ends empty the find will fail and do not delete files
from the root.

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,6 +15,7 @@ man8dir		= $(mandir)/man8
 docdir		= $(prefix)/doc
 atdocdir	= $(docdir)/at
 etcdir		= @ETCDIR@
+atjobdir	= @ATJBD@
 systemdsystemunitdir = @systemdsystemunitdir@
 
 DAEMON_USERNAME	= @DAEMON_USERNAME@
@@ -83,7 +84,7 @@ lex.yy.c: parsetime.l
 	$(LEX) -i parsetime.l
 
 atd.service: atd.service.in
-	sed -e 's![@]sbindir[@]!$(sbindir)!g' < $< > $@
+	cat $< | sed -e 's![@]sbindir[@]!$(sbindir)!g' | sed -e 's![@]atjobdir[@]!$(atjobdir)!g' > $@
 
 atrun: atrun.in
 	configure
