--- a/atd.service.in
+++ b/atd.service.in
@@ -4,6 +4,7 @@ Documentation=man:atd(8)
 After=remote-fs.target nss-user-lookup.target
 
 [Service]
+ExecStartPre=-find @atjobdir@ -type f -name "=*" -not -newercc /run/systemd -delete
 ExecStart=@sbindir@/atd -f
 IgnoreSIGPIPE=false
 KillMode=process
