New upstream version 3.1.21

--- a/Makefile.in
+++ b/Makefile.in
@@ -15,7 +15,6 @@ man8dir		= $(mandir)/man8
 docdir		= $(prefix)/doc
 atdocdir	= $(docdir)/at
 etcdir		= @ETCDIR@
-atjobdir	= @ATJBD@
 systemdsystemunitdir = @systemdsystemunitdir@
 
 DAEMON_USERNAME	= @DAEMON_USERNAME@
@@ -84,7 +83,7 @@ lex.yy.c: parsetime.l
 	$(LEX) -i parsetime.l
 
 atd.service: atd.service.in
-	cat $< | sed -e 's![@]sbindir[@]!$(sbindir)!g' | sed -e 's![@]atjobdir[@]!$(atjobdir)!g' > $@
+	sed -e 's![@]sbindir[@]!$(sbindir)!g' < $< > $@
 
 atrun: atrun.in
 	configure
