--- a/atd.8.in
+++ b/atd.8.in
@@ -3,48 +3,48 @@
 atd \- run jobs queued for later execution
 .SH SYNOPSIS
 .B atd
-.RB [ \-l
+.RB [ -l
 .IR load_avg ]
-.RB [ \-b
+.RB [ -b
 .IR batch_interval ]
-.RB [ \-d ]
-.RB [ \-f ]
-.RB [ \-s ]
+.RB [ -d ]
+.RB [ -f ]
+.RB [ -s ]
 .SH DESCRIPTION
 .B atd
 runs jobs queued by
-.BR at (1) .
+.BR at(1) .
 .PP
 .SH OPTIONS
 .TP 8
-.B \-l
+.B -l
 Specifies a limiting load factor, over which batch jobs should
 not be run, instead of the compile-time choice of @LOADAVG_MX@.
 For an SMP system with
 .I n
 CPUs, you will probably want to set this higher than
-.IR n\-1.
+.IR n-1.
 .TP 8
-.B \-b
+.B -b
 Specify the minimum interval in seconds between the start of two
 batch jobs (60 default).
 .TP 8
-.B \-d
+.B -d
 Debug; print error messages to standard error instead of using
-.BR syslog (3) .
+.BR syslog(3) .
 This option also implies
-.BR \-f .
+.BR -f .
 .TP
-.B \-f
+.B -f
 Run
 .BR atd
 in the foreground.
 .TP 8
-.B \-s
+.B -s
 Process the at/batch queue only once.
 This is primarily of use for compatibility with old versions of
 .BR at ;
-.B "atd \-s"
+.B "atd -s"
 is equivalent to the old
 .B atrun
 command.
@@ -63,7 +63,7 @@ The directory for storing output; this should be mode 700, owner
 @DAEMON_USERNAME@.
 .PP
 .IR /etc/at.allow ,
-.I /etc/at.deny
+.IR /etc/at.deny
 determine who can use the
 .B at
 system.
@@ -75,7 +75,7 @@ system.
 .BR crontab (1),
 .BR syslog (3).
 .SH BUGS
-The functionality of
+The functionality of 
 .B atd
 should be merged into
 .BR cron (8) .
