--- a/pam.conf
+++ b/pam.conf
@@ -2,9 +2,9 @@
 # The PAM configuration file for the at daemon
 #
 
+auth	required	pam_env.so
 @include common-auth
 @include common-account
 session    required   pam_loginuid.so
 @include common-session-noninteractive
 session    required   pam_limits.so
-auth	required	pam_env.so user_readenv=1
