configure.ac: check if libc provides __isleap() macro
Signed-off-by: Giulio Benetti <giulio.benetti@micronovasrl.com>

--- a/config.h.in
+++ b/config.h.in
@@ -44,6 +44,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if libc provides __isleap macro */
+#undef HAVE_ISLEAP
+
 /* Define to 1 if you have the `dgc' library (-ldgc). */
 #undef HAVE_LIBDGC
 
