.gitignore: add all files produced during building
Signed-off-by: Giulio Benetti <giulio.benetti@micronovasrl.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 autom4te.cache
 *~
+Makefile
+*.o
+at
+at.1
+at.allow.5
+atd
+atd.8
+atd.service
+atq
+atrm
+atrun
+atrun.8
+batch
+config.h
+config.log
+config.status
+lex.yy.c
+y.tab.c
+y.tab.h
