Set PIDDIR to /run if exists on the system
/var/run is a symlink to /run on Linux systems and it has beene
deprecated. Use /run if it exists on the system.

--- a/configure.ac
+++ b/configure.ac
@@ -139,7 +139,9 @@ AC_ARG_WITH(systemdsystemunitdir,
 AC_SUBST(systemdsystemunitdir, [$with_systemdsystemunitdir])
 
 AC_MSG_CHECKING(location of pid file)
-if test -d /var/run ; then
+if test -d /run ; then
+    PIDDIR=/run
+elif test -d /var/run ; then
     PIDDIR=/var/run
 elif test -d /usr/run ; then
     PIDDIR=/usr/run
