--- a/config.h.in
+++ b/config.h.in
@@ -19,6 +19,9 @@
 /* Define to 1 if compiler supports __attribute__((noreturn)) */
 #undef HAVE_ATTRIBUTE_NORETURN
 
+/* Define to 1 if you have the `clock_gettime' function. */
+#undef HAVE_CLOCK_GETTIME
+
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
    */
 #undef HAVE_DIRENT_H
@@ -135,6 +138,9 @@
 
 /* Define to 1 if you have <sys/wait.h> that is POSIX.1 compatible. */
 #undef HAVE_SYS_WAIT_H
+
+/* Define to 1 if you have the `timer_create' function. */
+#undef HAVE_TIMER_CREATE
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
