--- a/at.1.in
+++ b/at.1.in
@@ -33,6 +33,8 @@ at, batch, atq, atrm \- queue, examine, or delete jobs for later execution
 .RB [ \-V ]
 .RB [ \-q
 .IR queue ]
+.RB [ -o
+.IR timeformat ]
 .br
 .B at
 .RB [ \-rd ]
@@ -269,6 +271,9 @@ Times displayed will be in the format "Thu Feb 20 14:50:00 1997".
 .B
 \-c
 cats the jobs listed on the command line to standard output.
+.TP 8
+.BI \-o " fmt"
+strftime-like time format used for the job list
 .SH FILES
 .I @ATJBD@
 .br
